eclipse/rdf4j#2274 fix css layout so links are clickable on mobile

--- a/site/static/css/rdf4j.css
+++ b/site/static/css/rdf4j.css
@@ -36,16 +36,15 @@ td,th {
 }
 
 div.doc-section {
-  float: left;
-  width: 400px;
-  margin: 10px;
 }
 
+h3.doc-section-header {
+  margin-bottom: 0px;
+}
 .doc-section-header a:link, .doc-section-header a:visited {
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   font-weight: medium;
-  font-size: larger;
   background: #DA5800;
   padding-left: 20px;
   padding-right: 20px;
@@ -55,5 +54,5 @@ div.doc-section {
 .doc-section-content {
   background: white;
   padding: 6px;
-  box-shadow: 5px 5px 4px #888888;
+  box-shadow: 3px 3px 2px #888888;
 }
